<resources>
    <string name="app_name">Telecom Systems</string>
    <string name="input_signal">Входной сигнал</string>
    <string name="output_signal">Выходной сигнал</string>
    <string name="output_constellation">Созвездие</string>
    <string name="filter_order">Порядок</string>
    <string name="weight_func">Весовая функция</string>
    <string name="filter_cutoff_freq">Частота среза</string>
    <string name="impulse_response">Импульсная характеристика</string>
    <string name="filter">Фильтр</string>
    <string name="qpsk_demodulator">Qpsk демодулятор</string>
    <string name="i_signal">I-составляющая</string>
    <string name="q_signal">Q-составляющая</string>
    <string name="filtered_q_signal">Q-составляющая после фильтрации</string>
    <string name="filtered_i_signal">I-составляющая после фильтрации</string>
    <string name="data">Данные: </string>
    <string name="code">Код: </string>
    <string name="channel_name">Канал: </string>
    <string name="generate_channels">Создать каналы</string>
    <string name="channels">Каналы</string>
    <string name="ether">Эфир</string>
    <string name="SNR">Отношение Eb/N0, дБ</string>
    <string name="data_source">Источник данных</string>
    <string name="statistics">Статистика</string>
    <string name="decoder">Декодер</string>
    <string name="demodulator">Демодулятор</string>
    <string name="channel_count">Количество каналов</string>
    <string name="code_types">Тип кодов</string>
    <string name="frame_length">Длина фрейма</string>
    <string name="channel_delete_button_descr">Channel delete button</string>
    <string name="input_data">Входные данные</string>
    <string name="channel_code">Код канала</string>
    <string name="decode_channels">Декодировать каналы</string>
    <string name="generator">Генератор</string>
    <string name="demodulation">Демодуляция</string>
    <string name="input_spectrum">Спектр сигнала</string>
    <string name="processing">Обработка</string>
    <string name="frequency_in_megaherz">Частота, МГц</string>
    <string name="i_channel">I-канал</string>
    <string name="q_channel">Q-канал</string>
    <string name="i_signal_data">Данные I-составляющей</string>
    <string name="q_signal_data">Данные Q-составляющей</string>
    <string name="threshold">Пороговый уровень сигнала</string>
    <string name="signal">Сигнал</string>
    <string name="channel_data">Данные составляющей</string>
    <string name="sum_data">Данные</string>
    <string name="bit_time">Время бита, мкс</string>
    <string name="code_length">Длина кода</string>
    <string name="default_channel_count">0</string>
    <string name="ber">BER, %</string>
    <string name="error_bits">Ошибочных битов</string>
    <string name="bits_transmitted">Бит передано</string>
    <string name="percent">%</string>
    <string name="bits_received">Бит принято</string>
    <string name="data_speed">Скорость передачи данных, кБит/с</string>
    <string name="process_data">Обработать</string>
    <string name="error_positive_num">Введите положительное целое число</string>
    <string name="error_positive_num_decimal">Введите положительное число</string>
    <string name="error_num">Введите число</string>
    <string name="adc">АЦП</string>
    <string name="ether_noise_enable">Включить шумы</string>
    <string name="settings_source_key">SETTINGS_SOURCE_KEY</string>
    <string name="source_noise_enable_key">SOURCE_NOISE_ENABLE_KEY</string>
    <string name="draw_graph">Построить графики</string>
    <string name="from_snr_in_db">от Eb/N0, дБ</string>
    <string name="to_snr_in_db">до Eb/N0, дБ</string>
    <string name="ber_calculation">Рассчет BER</string>
    <string name="source_channels_freq_key">source_channels_freq_key</string>
    <string name="source_channels_dataspeed_key">source_channels_dataspeed_key</string>
    <string name="source_channels_codetype_key">source_channels_codetype_key</string>
    <string name="source_channels_framesize_key">source_channels_framesize_key</string>
    <string name="source_channels_count_key">source_channels_count_key</string>
    <string name="source_adc_freq_key">source_adc_freq_key</string>
    <string name="source_noise_snr_key">source_noise_snr_key</string>
    <string name="settings_demodulator_key">settings_demodulator_key</string>
    <string name="demodulator_generator_freq_key">demodulator_generator_freq_key</string>
    <string name="demodulator_filter_cutoff_freq_key">demodulator_filter_cutoff_freq_key</string>
    <string name="demodulator_filter_window_type_key">demodulator_filter_window_type_key</string>
    <string name="demodulator_filter_order_key">demodulator_filter_order_key</string>
    <string name="demodulator_process_threshold_key">demodulator_process_threshold_key</string>
    <string name="demodulator_process_dataspeed_key">demodulator_process_dataspeed_key</string>
    <string name="demodulator_process_code_length_key">demodulator_process_code_length_key</string>
    <string name="demodulator_process_frame_length_key">demodulator_process_frame_length_key</string>
    <string name="decoder_channels_codetype_key">decoder_channels_codetype_key</string>
    <string name="decoder_channels_count_key">decoder_channels_count_key</string>
    <string name="source_channels_codesize_key">source_channels_codesize_key</string>
    <string name="decoder_code_length_key">decoder_code_length_key</string>
    <string name="decoder_threshold_key">decoder_threshold_key</string>
    <string name="hint_graphs_invalid_channels">*Необходимо настроить каналы источника и декодера</string>
    <string name="frame_count">Количество фреймов</string>
    <string name="start_transmitting">Начать передачу</string>
    <string name="source_channels_frame_count_key">source_channels_frame_count_key</string>
    <string name="resolution">Разрядность</string>
    <string name="start_processing">Начать обработку</string>
    <string name="simulation_data_source">Симуляция</string>
    <string name="usb_data_source">USB</string>
    <string name="usb_source_adc_freq_key">usb_source_adc_freq_key</string>
    <string name="usb_source_adc_resolution_key">usb_source_adc_resolution_key</string>
    <string name="usb_source_channels_codetype_key">usb_source_channels_codetype_key</string>
    <string name="usb_source_channels_freq_key">usb_source_channels_freq_key</string>
    <string name="usb_source_channels_dataspeed_key">usb_source_channels_dataspeed_key</string>
    <string name="usb_source_channels_count_key">usb_source_channels_count_key</string>
    <string name="usb_source_channels_codesize_key">usb_source_channels_codesize_key</string>
    <string name="usb_source_channels_framesize_key">usb_source_channels_framesize_key</string>
    <string name="file_data_source">Файл</string>
    <string name="source_interference_enable_key">source_interference_enable_key</string>
    <string name="sparseness">Разреженность</string>
    <string name="SIR">Отношение Eb/N0, дБ</string>
    <string name="source_interference_snr_key">source_interference_rate_key</string>
    <string name="source_interference_sparseness_key">source_interference_sparseness_key</string>
    <string name="ether_interference_enable">Включить помехи</string>
    <string name="ether_settings">Настройка эфира</string>
    <string name="apply">Применить</string>
    <string name="channels_settings">Настройка каналов</string>
    <string name="simulation">Симуляция</string>
    <string name="simulation_frequency_in_megaherz">Частота дискретизации, МГц</string>
    <string name="settings_changed">Настройки изменены</string>
    <string name="hint_setup_channels">*Настройте каналы чтобы начать передачу</string>
    <string name="points_count">Количество точек</string>
    <string name="settings_decoder_key">settings_decoder_key</string>
    <string name="filters_delay_compensation">Компенсация задержки фильтров, 0…1</string>
    <string name="error_not_negative_num_decimal">Введите неотрицательное число</string>
    <string name="demodulator_process_delay_compensation_key">demodulator_process_delay_compensation_key</string>
    <string name="enter_valid_data">Введите корректные данные</string>
    <string name="error_from_zero_to_one">Введите число от 0 до 1</string>
    <string name="last_transmitting">Последняя передача</string>
    <string name="channel_generated">Каналов сгенерировано</string>
    <string name="error_probability">Вероятность ошибки</string>
    <string name="characteristics_calculation">Расчет характеристик</string>
    <string name="capacity_and_dataspeed">Пропускная способность и скорость передачи, кБит/с</string>
    <string name="channels_autodetection">Автоопределение каналов</string>
    <string name="decoder_channels_autodetection_key">decoder_channels_autodetection_key</string>
    <string name="menu_about">О приложении</string>
    <string name="about_app_body">Данное приложение предназначено для моделирования радиоприемника с QPSK модуляцией и кодовым разделением каналов (CDMA) в радиоканале с помехами</string>
    <string name="developer_label">Разработчик:</string>
    <string name="developer_name">Тотилас А.А.</string>
    <string name="cancel">Закрыть</string>
    <string name="settings_characteristics_key">settings_characteristics_key</string>
    <string name="characteristics_start_snr_key">characteristics_from_snr_key</string>
    <string name="characteristics_finish_snr_key">characteristics_finish_snr_key</string>
    <string name="characteristics_points_count_key">characteristics_points_count_key</string>
    <string name="process_name_placeholder">Название процесса</string>
    <string name="data_label">Данные</string>
    <string name="source_coding">Кодирование источника</string>
    <string name="source_data_coding_enable_key">source_data_coding_enable_key</string>
    <string name="source_data_coding_type_key">source_data_coding_type_key</string>
    <string name="source_data_coding_word_length_key">source_data_coding_word_length_key</string>
    <string name="code_word_length">Длина слова</string>
    <string name="error_code_word_length">Длина слова не может быть меньше 3</string>
    <string name="source_decoding">Декодирование источника</string>
    <string name="channel_code_types">Тип канальных кодов</string>
    <string name="channel_code_length">Длина канальных кодов</string>
    <string name="data_code_types">Тип кодов источника</string>
    <string name="decoder_data_decoding_enable_key">decoder_data_coding_enable_key</string>
    <string name="decoder_data_coding_type_key">decoder_data_coding_type_key</string>
    <string name="decoder_data_coding_word_length_key">decoder_data_coding_word_length_key</string>
    <string name="channels_label">Каналы</string>
    <string name="data_bits_transmitted">Передано</string>
    <string name="data_bits_received">Принято</string>
    <string name="data_error_bits">Ошибок</string>
    <string name="transmitted">Передано</string>
    <string name="received">Принято</string>
    <string name="errors">Ошибок</string>
    <string name="bit">бит</string>
</resources>
