<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.demodulators.QpskDemodulatorFragment">

        <TextView
            android:id="@+id/input_signal_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_graph_label"
            android:layout_marginTop="16dp"
            android:text="@string/input_signal"
            app:layout_constraintTop_toTopOf="parent" />

        <com.jjoe64.graphview.GraphView
            android:id="@+id/input_signal_chart"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_graph_signal"
            app:layout_constraintTop_toBottomOf="@id/input_signal_label" />

        <TextView
            android:id="@+id/i_signal_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_graph_label"
            android:layout_marginTop="16dp"
            android:text="@string/i_signal"
            app:layout_constraintTop_toBottomOf="@id/input_signal_chart" />

        <com.jjoe64.graphview.GraphView
            android:id="@+id/i_signal_chart"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_graph_signal"
            app:layout_constraintTop_toBottomOf="@id/i_signal_label" />

        <TextView
            android:id="@+id/filtered_i_signal_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_graph_label"
            android:layout_marginTop="16dp"
            android:text="@string/filtered_i_signal"
            app:layout_constraintTop_toBottomOf="@id/i_signal_chart" />

        <com.jjoe64.graphview.GraphView
            android:id="@+id/filtered_i_signal_chart"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_graph_signal"
            app:layout_constraintTop_toBottomOf="@id/filtered_i_signal_label" />

        <TextView
            android:id="@+id/q_signal_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_graph_label"
            android:layout_marginTop="16dp"
            android:text="@string/q_signal"
            app:layout_constraintTop_toBottomOf="@id/filtered_i_signal_chart" />

        <com.jjoe64.graphview.GraphView
            android:id="@+id/q_signal_chart"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_graph_signal"
            app:layout_constraintTop_toBottomOf="@id/q_signal_label" />

        <TextView
            android:id="@+id/filtered_q_signal_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_graph_label"
            android:layout_marginTop="16dp"
            android:text="@string/filtered_q_signal"
            app:layout_constraintTop_toBottomOf="@id/q_signal_chart" />

        <com.jjoe64.graphview.GraphView
            android:id="@+id/filtered_q_signal_chart"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_graph_signal"
            app:layout_constraintTop_toBottomOf="@id/filtered_q_signal_label" />

        <TextView
            android:id="@+id/output_signal_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_graph_label"
            android:layout_marginTop="16dp"
            android:text="@string/output_signal"
            app:layout_constraintTop_toBottomOf="@id/filtered_q_signal_chart" />

        <com.jjoe64.graphview.GraphView
            android:id="@+id/output_signal_chart"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_graph_signal"
            app:layout_constraintTop_toBottomOf="@id/output_signal_label" />

        <TextView
            android:id="@+id/output_constellation_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_graph_label"
            android:layout_marginTop="16dp"
            android:text="@string/output_constellation"
            app:layout_constraintTop_toBottomOf="@id/output_signal_chart" />

        <alektas.telecomapp.ui.chart.polar.PolarGraphView
            android:id="@+id/constellation_chart"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_graph_constellation"
            app:label_x="I"
            app:label_y="Q"
            app:labels_text_size="@dimen/textsize_graph_view_label"
            app:layout_constraintTop_toBottomOf="@id/output_constellation_label" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/to_qpsk_demod_filter_btn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:onClick="onNavigateBtnClick"
            android:text="@string/filter_setting"
            app:layout_constraintTop_toBottomOf="@id/constellation_chart"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
